Add hero section with image to home layout
Added a hero section with an image to the home layout.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,14 @@ layout: default
 ---
 
 <section class="home">
+  
+<section class="hero">
+  <img
+    src="{{ '/assets/images/ChatGPT Image 9 nov. 2025, 01_31_28.png' | relative_url }}"
+    alt="Cerveau sous-traité - bannière satirique IA"
+    class="hero-img">
+</section>
+
   <h1 class="page-title">Articles récents 📰</h1>
 
   {% for post in site.posts %}
